--- a/CSS/Estilos.css
+++ b/CSS/Estilos.css
@@ -1,25 +1,64 @@
+/* soft reset do css */
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
+
 body {
-    background-image: url("https://redew.com.br/imagens/background-parallax-portfolio.png");
+   background-image: url("../img/fundo.JPG");
    background-size: auto 100vh;
-    font-family: Arial;
+   font-family: Arial;
    height: 100vh;
+   font-size: 10px;
+ }
+/*se a tela tiver pelo menos 400px vai carregar estes estilos*/
+@media (min-width: 400px) {
+  body {
+    font-size: 14px;
+  }
+/*breakpoint*/
+@media (min-width: 600px) {
+    body {
+      font-size: 18px;
+    }
+/*breakpoint*/
+@media (min-width: 1200px) {
+      body {
+        font-size: 20px;
+       
+} 
+
+ header {
+   height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
  }
  
  .menu {
-    background-color: white;      
+    background-color:skyblue;
+    position:  fixed; 
+    width: 100vw;
+    top: 0;  
  }
  
  .menu ul {
    display: flex;
    justify-content:space-around;
- }
+  }
  
  .menu li {
    list-style: none;  
- }
+   }
  
+ .menu a {
+   display: block;
+   padding: 10px 20px;
+  }
+
  a {
-   color: orange;
+   color: rgb(255, 255, 255);
    text-decoration: none;
  }
  
@@ -29,8 +68,12 @@ body {
  
  .site-subtitle,
  .site-title {
-   color: black;
+   color: rgb(44, 150, 212);
    text-align: center;
+ }
+
+ .site-title {
+   font-size: 4em;
  }
  
  
@@ -38,4 +81,8 @@ body {
    font-style: italic;
  }
  
+ .img-portfolio {
+   height: 180px;
+   width: 180px;
+ }
  
