--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -124,13 +124,24 @@ a:hover {
     line-height: 1.5em;
     text-shadow: 1px 2px 10px blueviolet;
   }
-  
+  .sobre, 
   .contato,
   .portfolio {
     background-color:skyblue;
     padding: 2em;
     min-height: 100vh;
+    
   }
+
+  @media (min-width: 1200px){
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+  }
+}  
+  
+  .sobre h2,
   .contato h2,
   .portfolio h2 { 
    font-family: 'Special Elite', cursive;
@@ -141,7 +152,45 @@ a:hover {
    font-size: 2em;
 
   }
+
+  .sobre p {
+    color: white;
+    margin-bottom: 1.5em;
+    text-indent: 1.5em;
+    text-align: justify;
+  }
+
+  .sobre a {
+    color:white;
+    text-decoration: blueviolet;
+    background-color: skyblue;
+  }
   
+  .sobre a:hover {
+    background-color: blueviolet;
+    color:blue;
+  }
+
+  .sobre .avatar {
+   clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+   margin-left: 2em;
+   
+}
+
+@media (min-width: 600px){
+  .sobre .avatar {
+    float: right;
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+  
+}
+}
+
+
+.sobre .avatar img {
+  height: 300px;
+  width: 300px;
+}
+
   .portfolio .grid {
    display: grid;
    gap: 2em;
@@ -149,7 +198,7 @@ a:hover {
 
   @media (min-width: 560px){
    .portfolio .grid {
-   grid-template-columns: 240px 240px ;
+   grid-template-columns: 200px 200px ;
   }
 }
 
@@ -162,33 +211,62 @@ a:hover {
    }
 }
 
-  .portfolio figure {
-   text-align: center;
+  
+  .flip-card {
+    height: 180px;
+   perspective: 1000px;
   }
 
-  .img-portfolio {
-   height: 240px;
-   width: 240px;
+  .flip-card:hover .card {
+    transform: rotateY(180deg); 
+  }
+   
+  .card {
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 3s;
+    -webkit-transition: transform 3s;
+    -moz-transition: transform 3s;
+    -ms-transition: transform 3s;
+    -o-transition: transform 3s;
+  }
+
+
+  .card-front, .card-back {
+    backface-visibility: hidden;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+  .card-back {
+    display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(../img/Gatochi.jpg);
+  text-align: center;
+   height: 200px;
+   width: 100%;
    object-fit: cover;
-   object-position: center;
-   border-radius: 50%;
-   -webkit-border-radius: 50%;
-   -moz-border-radius: 50%;
-   -ms-border-radius: 50%;
-   -o-border-radius: 50%;
-   transition: transform 500ms;
-  }
-   
-   .img-portfolio:hover {
-   transform: scale(1.2);
-   transform: scale(1.2) ;
-   -webkit-transform: scale(1.2);
-   -moz-transform: scale(1.2);
-   -ms-transform: scale(1.2);
-   -o-transform: scale(1.2);
-} 
-   
+   transform: rotateY(180deg);
+   -webkit-transform: rotateY(180deg);
+   -moz-transform: rotateY(180deg);
+   -ms-transform: rotateY(180deg);
+   -o-transform: rotateY(180deg);
+}
+@media (min-width: 375px) {
+  .card-back {
+    display: flex;
+  align-items: center;
+  justify-content: center;
+   background-image: url(../img/Gatochi.jpg);
+   height: 200px;
+   width: 100%;
+   object-fit: cover;
+  
 
+}
 
   /*@media (min-width: 1200px) {
     .img-portfolio {
@@ -196,6 +274,27 @@ a:hover {
       width: 100%;
   }
 }*/
+
+.portfolio figure {
+  text-align: center;
+ }
+
+ .img-portfolio {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+ 
+ }
+  
+  /*.img-portfolio:hover {
+  transform: scale(1.2);
+  transform: scale(1.2) ;
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+} */
 
   .contato .icons {
     text-align: center;
